--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
-<head>
-   <style>
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap');
-  </style>
-</head>
 
-.p1 
+
+p {
+   font-family: "Arial", sans-serif;
+}
+
+a {
+   font-family: "Arial", sans-serif;
+}
+
+label {
+   font-family: "Arial", sans-serif;
+}
+
+h3 {
+   font-family: "Arial", sans-serif;
+}
+
+
 
